--- a/Kontakt.html
+++ b/Kontakt.html
@@ -9,24 +9,29 @@
     <link rel="stylesheet" href="styles/style-kontakt.css">
 
   </head>
-  <body>
+  <body onload="setName()">
 
 
     <div class="kontakt-container">
       <form class="kontakt-forma">
-        <h3>KONTAKTIRAJTE NAS</h3>
+        <h3 id="title"></h3>
+
+
         <input type="text" id="name" placeholder="Ime">
         <input type="text" id="lastName" placeholder="Prezime">
         <input type="email" id="email" placeholder="Email">
         <input type="text" id="phone" placeholder="Broj telefona">
-        <textarea id="message" rows="4" placeholder="Kako vam mozemo pomoći"></textarea>
+
         <button type="" onclick="testContact()">Pošalji</button>
       </form>
     </div>
 
 
 
+
     <script src="scripts/buy.js"></script>
+
+
 
   </body>
 </html>
