--- a/GamingPC.html
+++ b/GamingPC.html
@@ -48,7 +48,7 @@
       <div class="box-gaming">
 
         <a href="ryzen-pc.html"><img
-            src="/images/amd-ryzen-72700x-am4-protsessor-ryzen-riazan-riazhenka-kukur.jpg"
+            src="images/amd-ryzen-72700x-am4-protsessor-ryzen-riazan-riazhenka-kukur.jpg"
             alt="">
 
         </a>
@@ -61,7 +61,7 @@
       <div class="box-gaming">
         <a href="intel-pc.html">
 
-          <img src="/images/wp7320446.jpg" alt="">
+          <img src="images/wp7320446.jpg" alt="">
         </a>
 
       </div>
@@ -73,10 +73,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
