--- a/Komponente.html
+++ b/Komponente.html
@@ -46,7 +46,7 @@
         <div>
           <a href="procesor.html">
             <img
-              src="/images/cpu1.webp"
+              src="images/cpu1.webp"
               alt="">
           </a>
 
@@ -56,7 +56,7 @@
       <div class="box-komponente">
         <div>
           <a href="maticna ploca.html">
-            <img src="/images/maticna ploca.webp" alt="">
+            <img src="images/maticna ploca.webp" alt="">
           </a>
         </div>
       </div>
@@ -64,7 +64,7 @@
       <div class="box-komponente">
         <div>
           <a href="graficka kartica.html">
-            <img src="/images/graficka.webp" alt="">
+            <img src="images/graficka.webp" alt="">
           </a>
         </div>
       </div>
@@ -72,7 +72,7 @@
       <div class="box-komponente">
         <div>
           <a href="ram memorija.html">
-            <img src="/images/ram.jpg" alt="">
+            <img src="images/ram.jpg" alt="">
           </a>
         </div>
       </div>
@@ -80,7 +80,7 @@
       <div class="box-komponente">
         <div>
           <a href="ssd.html">
-            <img src="/images/ssd.jpg" alt="">
+            <img src="images/ssd.jpg" alt="">
           </a>
         </div>
       </div>
@@ -88,7 +88,7 @@
       <div class="box-komponente">
         <div>
           <a href="hdd.html">
-            <img src="/images/hdd.jpg" alt="">
+            <img src="images/hdd.jpg" alt="">
           </a>
         </div>
       </div>
@@ -96,7 +96,7 @@
       <div class="box-komponente">
         <div>
           <a href="napojna.html">
-            <img src="/images/napojna.webp" alt="">
+            <img src="images/napojna.webp" alt="">
           </a>
         </div>
       </div>
@@ -104,7 +104,7 @@
       <div class="box-komponente">
         <div>
           <a href="cooler.html">
-            <img src="/images/cooler.jpg" alt="">
+            <img src="images/cooler.jpg" alt="">
           </a>
         </div>
       </div>
@@ -118,10 +118,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
