--- a/Konzole.html
+++ b/Konzole.html
@@ -46,7 +46,7 @@
         <div class="velicina-boxa">
           <a href="ps4.html">
             <img
-              src="/images/ps4.jpg"
+              src="images/ps4.jpg"
               alt="">
           </a>
 
@@ -56,7 +56,7 @@
       <div class="box-konzole">
         <div class="velicina-boxa">
           <a href="ps5.html">
-            <img src="/images/ps5.webp" alt="">
+            <img src="images/ps5.webp" alt="">
           </a>
         </div>
       </div>
@@ -64,7 +64,7 @@
       <div class="box-konzole">
         <div class="velicina-boxa">
           <a href="xbox.html">
-            <img src="/images//xbox.jpg" alt="">
+            <img src="images//xbox.jpg" alt="">
           </a>
         </div>
 
@@ -72,7 +72,7 @@
       <div class="box-konzole">
         <div class="velicina-boxa">
           <a href="nitendo.html">
-            <img src="/images/nitendo.jpg" alt="">
+            <img src="images/nitendo.jpg" alt="">
           </a>
         </div>
       </div>
@@ -81,10 +81,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
