--- a/Monitori.html
+++ b/Monitori.html
@@ -45,7 +45,7 @@
         <div class="velicina-boxa">
           <a href="acer-monitor.html">
             <img
-              src="/images/acer-monitor.jpg"
+              src="images/acer-monitor.jpg"
               alt="">
           </a>
 
@@ -55,7 +55,7 @@
       <div class="box-monitor">
         <div class="velicina-boxa">
           <a href="asus-monitor.html">
-            <img src="/images/asus-monitor.jpg" alt="">
+            <img src="images/asus-monitor.jpg" alt="">
           </a>
         </div>
       </div>
@@ -63,7 +63,7 @@
       <div class="box-monitor">
         <div class="velicina-boxa">
           <a href="samsung-monitor.html">
-            <img src="/images/samsung-monitor.jpg" alt="">
+            <img src="images/samsung-monitor.jpg" alt="">
           </a>
         </div>
       </div>
@@ -71,7 +71,7 @@
       <div class="box-monitor">
         <div class="velicina-boxa">
           <a href="msi-monitor.html">
-            <img src="/images/msi-monitor.jpg" alt="">
+            <img src="images/msi-monitor.jpg" alt="">
           </a>
         </div>
       </div>
@@ -79,7 +79,7 @@
       <div class="box-monitor">
         <div class="velicina-boxa">
           <a href="dell-monitor.html">
-            <img src="/images/dell.jpg" alt="">
+            <img src="images/dell.jpg" alt="">
           </a>
         </div>
       </div>
@@ -89,10 +89,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
