--- a/Periferije.html
+++ b/Periferije.html
@@ -45,7 +45,7 @@
         <div class="velicina-boxa">
           <a href="miš.html">
             <img
-              src="/images/mis.jpg"
+              src="images/mis.jpg"
               alt="">
           </a>
 
@@ -55,7 +55,7 @@
       <div class="box-periferije">
         <div class="velicina-boxa">
           <a href="tastatura.html">
-            <img src="/images/tastatura.jpg" alt="">
+            <img src="images/tastatura.jpg" alt="">
           </a>
         </div>
       </div>
@@ -63,7 +63,7 @@
       <div class="box-periferije">
         <div class="velicina-boxa">
           <a href="slusalice.html">
-            <img src="/images/slusalice.jpg" alt="">
+            <img src=" images/slusalice.jpg" alt="">
           </a>
         </div>
       </div>
@@ -71,7 +71,7 @@
       <div class="box-periferije">
         <div class="velicina-boxa">
           <a href="zvucnik.html">
-            <img src="/images/zvucnik.jpg" alt="">
+            <img src="images/zvucnik.jpg" alt="">
           </a>
         </div>
       </div>
@@ -79,7 +79,7 @@
       <div class="box-periferije">
         <div class="velicina-boxa">
           <a href="mikrofon.html">
-            <img src="/images/mic.jpg" alt="">
+            <img src="images/mic.jpg" alt="">
           </a>
         </div>
       </div>
@@ -87,7 +87,7 @@
       <div class="box-periferije">
         <div class="velicina-boxa">
           <a href="web kamera.html">
-            <img src="/images/web kamera.webp" alt="">
+            <img src="images/web kamera.webp" alt="">
           </a>
         </div>
       </div>
@@ -95,7 +95,7 @@
       <div class="box-periferije">
         <div class="velicina-boxa">
           <a href="externa memorija.html">
-            <img src="/images/externa memorija.jpg" alt="">
+            <img src="images/externa memorija.jpg" alt="">
           </a>
         </div>
       </div>
@@ -103,7 +103,7 @@
       <div class="box-periferije">
         <div class="velicina-boxa">
           <a href="mrezna oprema.html">
-            <img src="/images/mrezna oprema.webp" alt="">
+            <img src="images/mrezna oprema.webp" alt="">
           </a>
         </div>
       </div>
@@ -114,10 +114,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
