--- a/intel-pc.html
+++ b/intel-pc.html
@@ -50,7 +50,7 @@
     <div class="product-container">
 
       <div class="product-box">
-        <img src="/images/intel pc/intel1.jpg" alt="">
+        <img src="images/intel pc/intel1.jpg" alt="">
         <h2>Skytech Blaze 3.0</h2>
         <p> Intel Core i5 12400F 2.5 GHz, <br>
           RTX 3060, 500GB SSD, 16G DDR4 3200, <br> 600W Gold PSU, <br> AC Wi-Fi,
@@ -66,7 +66,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/intel pc/intel2.jpg" alt="">
+        <img src="images/intel pc/intel2.jpg" alt="">
         <h2>Skytech Chronos Gaming PC </h2>
         <p>Intel Core i7 12700K 3.6 GHz, <br>
           NVIDIA RTX 3080, 1TB NVME SSD, <br> 32GB DDR5 RAM RGB, 850W Gold PSU,
@@ -82,7 +82,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/intel pc/intell3.jpg" alt="">
+        <img src="images/intel pc/intell3.jpg" alt="">
         <h2>Skytech Gaming Archangel </h2>
         <p> Intel Core-i5 10400F 2.9GHz, <br> GTX 1660 Super 6G, 500GB SSD,
           16GB
@@ -99,7 +99,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/intel pc/intel4.jpg" alt="">
+        <img src="images/intel pc/intel4.jpg" alt="">
         <h2>Skytech Chronos Gaming PC</h2>
         <p>Intel Core i5 12600K 3.7 GHz, <br>
           NVIDIA RTX 3080, 1TB NVME SSD, <br> 16GB DDR4 RAM 3200, <br> 850W Gold
@@ -116,7 +116,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/intel pc/intel5.jpg" alt="">
+        <img src="images/intel pc/intel5.jpg" alt="">
         <h2>SkyTech Chronos Mini Gaming</h2>
         <p> Intel Core-i3 10100F 3.6GHz, <br> GTX 1650 4G, <br> 500GB SSD, 8G
           3000,
@@ -133,7 +133,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/intel pc/intel6.jpg" alt="">
+        <img src="images/intel pc/intel6.jpg" alt="">
         <h2>Skytech Shiva Gaming PC</h2>
         <p> Intel Core i5 12600K 3.7 GHz, <br> RTX
           3060 Ti, 1TB NVME SSD, <br> 32G DDR5 RGB, <br>
@@ -155,10 +155,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
