--- a/ryzen-pc.html
+++ b/ryzen-pc.html
@@ -49,7 +49,7 @@
     <div class="product-container">
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+        <img src="images/ryzen pc/ryzen1.jpg" alt="">
         <h2>Skytech Shadow Gaming Pc</h2>
         <p>AMD Ryzen 5 7600X 4.7 GHz, RTX 3060 Ti, <br> 1TB NVME SSD, 32G DDR5
           RGB,
@@ -67,7 +67,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen2.jpg" alt="">
+        <img src="images/ryzen pc/ryzen2.jpg" alt="">
         <h2>Skytech Prism II Gaming PC</h2>
         <p> AMD Ryzen 9 5950X 3.4GHz, RTX
           3090 24GB <br>GDDR6X, 32GB 3600 Trident Z Neo RGB,<br> 1TB Gen4 SSD,
@@ -84,7 +84,7 @@
         </div>
 
         <div class="product-box">
-          <img src="/images/ryzen pc/ryzen3.jpg" alt="">
+          <img src="images/ryzen pc/ryzen3.jpg" alt="">
           <h2>ADMI | Gaming PC </h2>
           <p> AMD Ryzen 5 3600 4.2GHz RTX 3060 <br>
             12GB Desktop PC • 16GB 3200MHz • 240GB SSD <br> • 1TB Hard Drive •
@@ -98,7 +98,7 @@
           </div>
 
           <div class="product-box">
-            <img src="/images/ryzen pc/ryzen4.jpg" alt="">
+            <img src="images/ryzen pc/ryzen4.jpg" alt="">
             <h2>Skytech Chronos Gaming PC </h2>
             <p>- AMD Ryzen 7 2700X, <br> NVIDIA RTX
               2070 Super 8GB, <br> 16GB DDR4 (2x 8GB), <br> 1TB SSD, 650 Watt
@@ -113,7 +113,7 @@
           </div>
 
           <div class="product-box">
-            <img src="/images/ryzen pc/ryzen5.jpg" alt="">
+            <img src="images/ryzen pc/ryzen5.jpg" alt="">
             <h2>SkytechBlaze 3.0 Gaming</h2>
             <p>AMD Ryzen 5 5600X 3.7 GHz, <br>
               RTX 3060 Ti, 1TB NVME SSD, <br> 16G DDR4 3200, 600W Gold PSU, AC
@@ -129,7 +129,7 @@
           </div>
 
           <div class="product-box">
-            <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+            <img src="images/ryzen pc/ryzen1.jpg" alt="">
             <h2>Skytech Shadow 3.0 Gaming </h2>
             <p>AMD Ryzen 7 3700X 3.6GHz, <br>
               RTX 3060 Ti 8GB GDDR6, 16GB DDR4 3000, <br> 1TB NVME, B550
@@ -171,10 +171,14 @@
         <footer>
           <div class="footer-content">
             <div class="social">
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-youtube"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com/" target="_blank"><i class="fab
+                  fa-instagram"></i></a>
+              <a href="https://www.youtube.com/" target="_blank"><i class="fab
+                  fa-youtube"></i></a>
+              <a href="https://twitter.com/" target="_blank"><i class="fab
+                  fa-twitter"></i></a>
+              <a href="https://www.facebook.com/" target="_blank"><i class="fab
+                  fa-facebook-f"></i></a>
             </div>
             <ul class="list">
               <li>
