--- a/xbox.html
+++ b/xbox.html
@@ -87,7 +87,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/xbox/x4.jpg" alt="">
+        <img src="images/xbox/x4.jpg" alt="">
         <h2>Microsoft Xbox 360</h2>
         <p> 20GB Console <br> (Renewed)</p>
         <p style=" font-weight: 800">410 KM</p>
@@ -107,10 +107,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
