--- a/asus-laptop.html
+++ b/asus-laptop.html
@@ -49,7 +49,7 @@
     <div class="product-container-laptop">
 
       <div class="product-box-laptop">
-        <img src="/images/asus laptop/asuslaptop1.jpg" alt="">
+        <img src="images/asus laptop/asuslaptop1.jpg" alt="">
         <h2>ASUS TUF Dash 15 (2022) Gaming Laptop</h2>
         <p> 15.6" 144Hz FHD Display, Intel
           Core i7-12650H, <br> GeForce RTX 3060, 16GB DDR5, 512GB SSD,
@@ -65,7 +65,7 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/asus laptop/asuslaptop2.jpg" alt="">
+        <img src="images/asus laptop/asuslaptop2.jpg" alt="">
         <h2>ASUS ROG Strix Scar 15 (2022) Gaming </h2>
         <p> 15.6” 300Hz IPS FHD
           Display, NVIDIA GeForce RTX 3070 Ti,<br> Intel Core i9 12900H, 16GB
@@ -83,7 +83,7 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/asus laptop/asuslaptop3.jpg" alt="">
+        <img src="images/asus laptop/asuslaptop3.jpg" alt="">
         <h2>ASUS ROG Strix Scar 15 (2021) Gaming</h2>
         <p> 15.6” 300Hz IPS Type
           FHD, NVIDIA GeForce RTX 3080, <br> AMD Ryzen 7 5800H, 16GB DDR4, 1TB
@@ -101,7 +101,7 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/asus laptop/asuslaptop4.jpg" alt="">
+        <img src="images/asus laptop/asuslaptop4.jpg" alt="">
         <h2>ASUS ROG Strix Scar 15 Gaming Laptop</h2>
         <p> 15.6" 300Hz IPS Type FHD
           Display, NVIDIA GeForce RTX 3080, <br> AMD Ryzen 9 5900HX, 16GB DDR4,
@@ -118,7 +118,7 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/asus laptop/asuslaptop5.jpg" alt="">
+        <img src="images/asus laptop/asuslaptop5.jpg" alt="">
         <h2>ASUS TUF Gaming F17 Gaming Laptop</h2>
         <p> 17.3" 144Hz FHD IPS-Type Display,
           Intel Core i5-11400H Processor, <br> GeForce RTX 3050, 8GB DDR4 RAM,
@@ -134,7 +134,7 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/asus laptop/asuslaptop6.jpg" alt="">
+        <img src="images/asus laptop/asuslaptop6.jpg" alt="">
         <h2>ASUS TUF A15 Gaming Laptop</h2>
         <p> 15.6" FHD 144Hz Screen, AMD Ryzen 7
           4800H, GeForce<br> RTX 3050 Ti, 32GB RAM, 1TB SSD, Webcam, RGB
@@ -155,10 +155,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
