--- a/nitendo.html
+++ b/nitendo.html
@@ -49,7 +49,7 @@
     <div class="product-container-konzole">
 
       <div class="product-box-konzole">
-        <img src="/images/nitendo/n1.jpg" alt="">
+        <img src="images/nitendo/n1.jpg" alt="">
         <h2>Nintendo Switch</h2>
         <p>™ with Neon Blue and Neon Red Joy‑Con™
         </p>
@@ -62,7 +62,7 @@
       </div>
 
       <div class="product-box-konzole">
-        <img src="/images/nitendo/n2.jpg" alt="">
+        <img src="images/nitendo/n2.jpg" alt="">
         <h2>Nintendo 64 System </h2>
         <p> Video Game Console (Renewed)</p>
         <p style=" font-weight: 800">320 KM</p>
@@ -74,7 +74,7 @@
       </div>
 
       <div class="product-box-konzole">
-        <img src="/images/nitendo/n3.jpg" alt="">
+        <img src="images/nitendo/n3.jpg" alt="">
         <h2>Wii Console</h2>
         <p> Bonus Wii Sports Resort & Wii MotionPlus Bundle
           (Renewed)</p>
@@ -95,10 +95,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
